--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>@Ela_darw | All links</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="icon" href="icon1.png" type="image/x-icon">
