--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 				</a>
 			</div>
 		</article>
-		<article id="article3"></article>
+		<article id="article3">
+			<h3>© 2021 @ela_draw |All links</h3>
+		</article>
 	</section>
 
 
