--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 					</div>
 				</a>
 			</div>
+		</article>
+		<article id="article3">
 			<h3>© 2021 @ela_draw |All links</h3>
 		</article>
 	</section>
